--- a/styles/style.css
+++ b/styles/style.css
@@ -53,9 +53,11 @@ body {
 	font-weight: 300;
 	color: var(--main-color);
 }
-.top-baner .title-discription{
+
+.top-baner .title-discription {
 	color: var(--main-color);
 }
+
 .title-discription {
 	color: var(--subtitle-text-color);
 	font-size: 17px;
@@ -83,8 +85,8 @@ body {
 .activity-photo {
 	width: 375px;
 	float: left;
-	margin-right: 15px;
-	margin-bottom: 15px;
+	margin-right: 30px;
+	margin-bottom: 40px;
 }
 
 .activity-description {
@@ -140,8 +142,32 @@ body {
 .consultation-section {
 	background-color: var(--carousel-bg-color);
 	min-height: 400px;
-	padding-top: 20px;
+	padding: 40px 20px 40px 20px;
 	margin-bottom: 70px;
+}
+
+.consultation-section h2,
+.consultation-section ul {
+	margin: 10px;
+}
+
+.consultation-section .nav-link {
+	color: var(--main-text-color);
+}
+
+.consultation-section .tab-pane {
+	padding: 20px;
+	background-color: var(--main-color);
+}
+
+@media (max-width: 979px) {
+	.consultation-img {
+		display: none;
+	}
+}
+
+.consultation-img {
+	max-height: 300px;
 }
 
 .carousel-img {
@@ -149,14 +175,20 @@ body {
 	float: right;
 	margin-bottom: 15px;
 }
-.carousel, .lide, .carousel-fade {
-  max-width: 400px;
-  margin: auto;
-}
 
+.carousel,
+.lide,
+.carousel-fade {
+	max-width: 400px;
+	margin: auto;
+}
 
 .carousel-item {
 	padding: 15px;
+}
+
+.result-section {
+	margin-top: 70px;
 }
 
 .services-sectiom h2 {
@@ -171,6 +203,34 @@ body {
 .card {
 	margin-bottom: 15px;
 	padding: 10px;
+	box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+.card-img-top {
+	filter: blur(4px);
+}
+
+.card-img-top:hover {
+	filter: none;
+}
+
+.card-title {
+	font-size: 26px;
+}
+
+.before-after-img {
+	width: 100%;
+	filter: blur(4px);
+}
+
+.before-after-img:hover {
+	filter: none;
+}
+
+.carousel,
+.lide,
+.carousel-fade {
+	max-width: 90%;
 }
 
 .feedback-section {
@@ -195,6 +255,7 @@ body {
 }
 
 .care-products-sections {
+	margin-top: 70px;
 	margin-bottom: 70px;
 }
 
@@ -239,6 +300,7 @@ body {
 
 
 /* Аккордеон */
+
 .accordion,
 .faq-section,
 .accordion-item,
@@ -247,10 +309,12 @@ body {
 	background-color: var(--sub-bg-color);
 	color: var(--main-color);
 }
+
 .accordion {
 	padding-top: 70px;
 	padding-bottom: 70px;
 }
+
 .accordion-item {
 	margin-bottom: 20px;
 	border: none;
@@ -259,11 +323,13 @@ body {
 .accordion-item__trigger {
 	padding: 20px;
 }
+
 .accordion-item__content {
 	margin-top: 15px;
 	display: none;
 	border-top: none;
 }
+
 .trigger-conteiner {
 	display: flex;
 	justify-content: space-between;
@@ -274,13 +340,17 @@ body {
 }
 
 @keyframes rotating {
-	0%   { transform: rotate(0deg); }
-	100% { transform: rotate(180deg); }
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(180deg);
+	}
 }
+
 .accordion-item--activated .faq-cross {
 	animation: rotating 0.25s linear
 }
-
 
 .read-more-text {
 	display: none;
@@ -306,18 +376,20 @@ body {
 	width: 50%;
 	margin-bottom: 20px;
 }
+
 .contuct-us-form {
 	width: 50%;
 }
 
 @media (max-width: 979px) {
-	.contuct-us-section .width-conteiner{
+	.contuct-us-section .width-conteiner {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
 		justify-content: center;
 	}
-	.contuct-us-form, .contuct-us-discription {
+	.contuct-us-form,
+	.contuct-us-discription {
 		width: 80%;
 	}
 }
@@ -344,14 +416,15 @@ body {
 	text-align: center;
 	margin: 20px;
 }
+
 .footer .navbar-nav a {
 	text-decoration: none;
 	color: var(--main-color);
 }
+
 .footer,
 .footer .title-discription {
 	color: var(--main-color);
-
 }
 
 @media (max-width: 950px) {
@@ -365,5 +438,6 @@ body {
 }
 
 .insta-logo {
-	width: 70px;;
+	width: 70px;
+	;
 }
